# kernex

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  MANIFESTO.md  README.md  ROADMAP.md  SECURITY.md  clippy.toml  deny.toml  release-plz.toml  rustfmt.toml  src_issues.txt
.cargo/: audit.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish-crates.yml  release-plz.yml  size-gate.yml
bench/: Cargo.toml  README.md
bench/benches/: cold_start.rs  memory.rs
crates/kernex/: CHANGELOG.md  Cargo.toml  README.md
crates/kernex-adapter-core/: CHANGELOG.md  Cargo.toml
crates/kernex-adapter-core/src/: lib.rs
crates/kernex-adapter-core/tests/: smoke.rs
crates/kernex-brain/: Cargo.toml
crates/kernex-brain/src/: lib.rs
crates/kernex-brain/tests/: smoke.rs
crates/kernex-core/: CHANGELOG.md  Cargo.toml  README.md
crates/kernex-core/src/: context.rs  error.rs  guardrails.rs  hooks.rs  lib.rs  message.rs  permissions.rs  pricing.rs  run.rs  sanitize.rs  spawn.rs  stream.rs  traits.rs  utf8.rs
crates/kernex-core/src/config/: defaults.rs  mod.rs  providers.rs
crates/kernex-memory/: CHANGELOG.md  Cargo.toml  README.md
crates/kernex-memory/migrations/: 001_init.sql  002_audit_log.sql  011_project_learning.sql  013_multi_lessons.sql  014_token_usage.sql  015_phase_checkpoints.sql  016_cache_token_breakdown.sql  017_soft_delete.sql  018_observations.sql  019_task_runs.sql
crates/kernex-memory/src/: audit.rs  consolidator.rs  error.rs  lib.rs  memory_store.rs  observation.rs  types.rs
crates/kernex-memory/src/store/: checkpoints.rs  context.rs  context_helpers.rs  conversations.rs  facts.rs  messages.rs  mod.rs  observations.rs  outcomes.rs  sessions.rs  tasks.rs  tests.rs  usage.rs
crates/kernex-pipelines/: CHANGELOG.md  Cargo.toml  README.md
crates/kernex-pipelines/src/: error.rs  lib.rs  topology.rs
crates/kernex-presets/: Cargo.toml
crates/kernex-presets/presets/: airgapped-defense.toml  ci-only.toml  full-kernex.toml  security-hardened.toml  solo-dev.toml
crates/kernex-presets/src/: lib.rs
crates/kernex-presets/tests/: smoke.rs
crates/kernex-providers/: CHANGELOG.md  Cargo.toml  README.md
crates/kernex-providers/fuzz/: Cargo.toml
crates/kernex-providers/fuzz/fuzz_targets/: truncate_target.rs
crates/kernex-providers/src/: anthropic.rs  bedrock.rs  error.rs  factory.rs  gemini.rs  http_retry.rs  lib.rs  mcp_client.rs  ollama.rs  openai.rs  openrouter.rs  tool_params.rs  tools.rs
crates/kernex-providers/src/claude_code/: command.rs  mcp.rs  mod.rs  provider.rs  tests.rs
crates/kernex-runtime/: CHANGELOG.md  Cargo.toml  README.md
crates/kernex-runtime/examples/: full_stack.rs  hello_world.rs  memory_agent.rs  pipeline_loader.rs  simple_chat.rs  skill_loader.rs
crates/kernex-runtime/src/: lib.rs  telemetry.rs
crates/kernex-sandbox/: CHANGELOG.md  Cargo.toml  README.md
crates/kernex-sandbox/src/: landlock_sandbox.rs  lib.rs  seatbelt.rs
crates/kernex-sandbox/tests/: home_lockdown.rs  network_egress.rs
crates/kernex-skills/: CHANGELOG.md  Cargo.toml  README.md
crates/kernex-skills/src/: error.rs  lib.rs  parse.rs  permissions.rs  projects.rs  skills.rs
crates/kernex/src/: lib.rs
docs/: bench-baseline-2026-05-10-cold-start.txt  bloat-baseline-2026-05-10-crates.txt  bloat-baseline-2026-05-10-functions.txt
examples/skills/: README.md
examples/skills/_template/: SKILL.md
examples/skills/brave-search/: SKILL.md
examples/skills/filesystem/: SKILL.md
examples/skills/git/: SKILL.md
examples/skills/github/: SKILL.md
examples/skills/pdf/: SKILL.md
examples/skills/playwright/: SKILL.md
examples/skills/postgres/: SKILL.md
examples/skills/sqlite/: SKILL.md
examples/skills/webhook/: SKILL.md
examples/topologies/code-review/: TOPOLOGY.toml
examples/topologies/code-review/agents/: fixer.md  planner.md  reviewer.md  summarizer.md
openspec/: config.yaml
openspec/archive/2026-05-memory-store-trait-introduction/: proposal.md  tasks.md
openspec/archive/2026-05-memory-typed-row-shape/: proposal.md
openspec/archive/2026-05-release-process-tooling/: proposal.md  tasks.md
openspec/archive/2026-05-typed-observation-table/: design.md  proposal.md  spec.md
openspec/archive/2026-05-workspace-crate-split/: proposal.md  tasks.md
openspec/archive/2026-05-workspace-profile-baseline/: proposal.md
openspec/changes/memory-store-trait-introduction/: proposal.md  tasks.md
openspec/changes/memory-typed-row-shape/: proposal.md  tasks.md
openspec/changes/typed-observation-table/: proposal.md  tasks.md
openspec/changes/workspace-crate-split/: proposal.md  tasks.md
openspec/changes/workspace-profile-baseline/: proposal.md  tasks.md
scripts/: check-cold-start.sh  publish-if-needed.sh  validate-publish-chain.sh
