[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/kernex-dev/kernex"
description = "The Rust runtime for AI agents"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
http = "1"

# Internal crates
kernex-core = { path = "crates/kernex-core" }
kernex-sandbox = { path = "crates/kernex-sandbox" }
kernex-providers = { path = "crates/kernex-providers" }
kernex-memory = { path = "crates/kernex-memory" }
kernex-skills = { path = "crates/kernex-skills" }
kernex-pipelines = { path = "crates/kernex-pipelines" }
kernex-runtime = { path = "crates/kernex-runtime" }
