[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.3.2"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/kernex-dev/kernex"
description = "The Rust runtime for AI agents"
documentation = "https://docs.rs/kernex-runtime"
keywords = ["ai", "agent", "sandbox", "runtime", "async"]
categories = ["api-bindings", "development-tools", "asynchronous"]

[workspace.dependencies]
tokio = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
http = "1"

# Internal crates
kernex-core = { version = "0.3.0", path = "crates/kernex-core" }
kernex-sandbox = { version = "0.3.0", path = "crates/kernex-sandbox" }
kernex-providers = { version = "0.3.0", path = "crates/kernex-providers" }
kernex-memory = { version = "0.3.0", path = "crates/kernex-memory" }
kernex-skills = { version = "0.3.0", path = "crates/kernex-skills" }
kernex-pipelines = { version = "0.3.0", path = "crates/kernex-pipelines" }
kernex-runtime = { version = "0.3.0", path = "crates/kernex-runtime" }
