[workspace]
members = ["crates/*", "bench"]
# `cargo build` / `cargo test` at the workspace root only touch the publishable
# crates; the `bench` crate stays out of the default set so contributors don't
# pay its criterion compile time on every local iteration. CI still builds it
# explicitly via the `examples` job (see .github/workflows/ci.yml).
default-members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2021"
# Conservative MSRV. If you need a newer language feature, run
# `cargo install cargo-msrv && cargo msrv verify` before bumping this so the
# new floor is supported by an actual toolchain check rather than a guess.
# Crates.io will surface the version to downstream consumers via
# `package.rust-version`, so dropping below this is a breaking change.
rust-version = "1.74"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/kernex-dev/kernex"
description = "The Rust runtime for AI agents"
documentation = "https://docs.rs/kernex-runtime"
keywords = ["ai", "agent", "sandbox", "runtime", "async"]
categories = ["api-bindings", "development-tools", "asynchronous"]

[workspace.dependencies]
tokio = "1"
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.27"
tracing-opentelemetry = "0.28"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
http = "1"
schemars = "0.8"
serde_yaml_ng = "0.10"
# Test-only. Each test gets a unique random path with RAII cleanup, eliminating
# the cross-test races the prior `temp_dir().join("__kernex_…__")` pattern hit.
tempfile = "3"

# Internal crates
kernex-core = { version = "0.6.0", path = "crates/kernex-core" }
kernex-sandbox = { version = "0.6.0", path = "crates/kernex-sandbox" }
kernex-providers = { version = "0.6.0", path = "crates/kernex-providers" }
kernex-memory = { version = "0.6.0", path = "crates/kernex-memory" }
kernex-skills = { version = "0.6.0", path = "crates/kernex-skills" }
kernex-pipelines = { version = "0.6.0", path = "crates/kernex-pipelines" }
kernex-runtime = { version = "0.6.0", path = "crates/kernex-runtime" }
kernex = { version = "0.6.0", path = "crates/kernex" }
kernex-adapter-core = { version = "0.6.0", path = "crates/kernex-adapter-core" }
kernex-presets = { version = "0.6.0", path = "crates/kernex-presets" }
kernex-brain = { version = "0.6.0", path = "crates/kernex-brain" }

# Centralized lint configuration. Each crate inherits these by setting
# `[lints] workspace = true` in its own Cargo.toml. Test code is exempted
# from unwrap/expect denials via `#![cfg_attr(test, allow(...))]` in each
# crate's lib.rs because Cargo's lint table cannot express cfg_attr.
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

# Workspace-wide unsafe-code ban; kernex-sandbox opts out via its own Cargo.toml.
[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

# Release profile tuned for binary size on macOS aarch64. The `kx` binary
# (sister repo) inherits these settings via the workspace; the headline
# "Single Binary · Under 15 MB" claim depends on this configuration.
#
# panic = "abort" is safe per a workspace-wide audit (no production callers
# of catch_unwind, panic::set_hook, panic::take_hook, resume_unwind,
# UnwindSafe, AssertUnwindSafe; #[should_panic] usage = none).
[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = "z"

# Internal benchmark fallback. Activated only if the cold-start bench
# regresses past its threshold under opt-level = "z". The shipped binary
# stays size-optimized unless that threshold forces the flip.
[profile.release-fast]
inherits = "release"
opt-level = "s"
