[package]
name = "kernex-bench"
version = "0.1.0"
edition = "2021"
publish = false

[[bench]]
name = "cold_start"
harness = false

[[bench]]
name = "memory"
harness = false

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
kernex-runtime = { path = "../crates/kernex-runtime" }
tempfile = "3"
futures = "0.3"

[target.'cfg(target_os = "macos")'.dev-dependencies]
libc = "0.2"
