[package]
name = "kernex-bench"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
publish = false

[[bench]]
name = "cold_start"
harness = false

[[bench]]
name = "memory"
harness = false

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
kernex-core = { workspace = true }
kernex-memory = { workspace = true }
kernex-runtime = { workspace = true }
tempfile = "3"
futures = "0.3"

[target.'cfg(target_os = "macos")'.dev-dependencies]
libc = "0.2"
