[package]
name = "kernex-adapter-core"
description = "Core Adapter trait and supporting types (AdapterId, Capability, Detection, AdapterRegistry) for Kernex agent adapters."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
