[package]
name = "kernex-pipelines"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Topology-driven multi-agent pipelines with corrective loops for Kernex"
readme = "README.md"

[dependencies]
kernex-core = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
