[package]
name = "kernex-presets"
description = "Workspace-internal TOML preset loader for kernex install bundles."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
kernex-adapter-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
basic-toml = { workspace = true }

[dev-dependencies]
# Used only by tests/smoke.rs for the Preset serde round-trip test;
# basic-toml is parse-only so we pick JSON as the round-trip medium to
# avoid pulling toml_edit back in via a TOML serializer dev-dep.
serde_json = { workspace = true }
