[package]
name = "kernex-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AI backend providers for Kernex (Claude Code, Anthropic, OpenAI, Ollama, OpenRouter, Gemini, MCP)"
readme = "../../README.md"

[dependencies]
kernex-core = { workspace = true }
kernex-sandbox = { workspace = true }
tokio = { workspace = true, features = ["process", "sync", "time", "rt", "fs", "io-util", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
secrecy = { version = "0.10", features = ["serde"] }

[dev-dependencies]
http = { workspace = true }
