[package]
name = "kernex-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Rust runtime for AI agents — composable engine with sandbox, providers, learning, and pipelines"
readme = "../../README.md"

[dependencies]
kernex-core = { workspace = true }
kernex-sandbox = { workspace = true }
kernex-providers = { workspace = true }
kernex-memory = { workspace = true, optional = true }
kernex-skills = { workspace = true }
kernex-pipelines = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

[features]
default = ["sqlite-store"]
sqlite-store = ["dep:kernex-memory"]

[dev-dependencies]
tracing-subscriber = { workspace = true }
