[package]
name = "kernex-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Rust runtime for AI agents. A composable engine with sandbox, providers, learning, and pipelines."
readme = "README.md"

[dependencies]
kernex-core = { workspace = true }
kernex-sandbox = { workspace = true }
kernex-providers = { workspace = true }
kernex-memory = { workspace = true, optional = true }
kernex-skills = { workspace = true }
kernex-pipelines = { workspace = true }
kernex-adapter-core = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
opentelemetry = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[features]
default = ["sqlite-store"]
sqlite-store = ["dep:kernex-memory"]
opentelemetry = ["dep:opentelemetry", "dep:tracing-opentelemetry"]

[dev-dependencies]
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }

# tracing-opentelemetry is exposed to downstream consumers via the
# `opentelemetry` feature; cargo-machete cannot see that intent.
[package.metadata.cargo-machete]
ignored = ["tracing-opentelemetry"]

[lints]
workspace = true
