[package]
name = "kernex-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OS-level sandboxing for AI agent subprocesses (Seatbelt on macOS, Landlock on Linux)"
readme = "../../README.md"

[dependencies]
tokio = { workspace = true, features = ["process", "io-util", "rt"] }
tracing = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
