[package]
name = "kernex-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Skills.sh-compatible skill loader and trigger matcher for Kernex"

[dependencies]
kernex-core = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
