[package]
name = "kernex-providers-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.kernex-providers]
path = ".."

[[bin]]
name = "truncate_target"
path = "fuzz_targets/truncate_target.rs"
test = false
doc = false
bench = false
